fixed deletion